--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="google-site-verification" content="KMUJp7ARNYzoPKq369Ld19KnejwlEwXdOXSqTckfVW8" />
     <meta name="coinzilla" content="4eaf9ca960c3b9a4e7398bfe288d3262" />
     <meta name="google-adsense-account" content="ca-pub-1508109246096690">
+    <meta name="monetag" content="bd360c5af5cd0950d8a8756f2373dd39">
 
     <title>TSX Dividend Tracker | Upcoming Ex-Dividend Dates & High-Yield Stocks (2024)</title>
     <meta name="description" content="Free real-time tracker for TSX dividend stocks: ex-dividend dates, payout yields (up to 10%), and payment calendars. Ideal for Canadian passive income investors.">
